Change name. Add Readme.md. Change version.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vscode-extension-bade",
-  "version": "0.1.0",
+  "displayName": "BADE (Bourne Again DEploy)",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.58.0"
   },
