--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vscode-extension-bade",
   "displayName": "BADE (Bourne Again DEploy)",
-  "version": "1.0.0",
+  "description": "Deploy and compare files to a ssh server",
+  "version": "1.1.0",
   "engines": {
     "vscode": "^1.58.0"
   },
