--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-extension-bade",
   "displayName": "BADE (Bourne Again DEploy)",
   "description": "Deploy and compare files to a ssh server",
-  "version": "1.8.6",
+  "version": "1.8.7",
   "engines": {
     "vscode": "^1.58.0"
   },
@@ -27,6 +27,7 @@
       "properties": {
         "bade": {
           "type": "object",
+          "scope": "resource",
           "properties": {
             "targets": {
               "type": "array",
